Bug 49602 - [4.7 Regression] verify_ssa failed (definition does not dominate use) with "-O2 -g"
Summary: [4.7 Regression] verify_ssa failed (definition does not dominate use) with "-...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: debug (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-30 23:59 UTC by Arthur O'Dwyer
Modified: 2011-07-04 18:24 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work: 4.4.5, 4.5.1, 4.6.1
Known to fail:
Last reconfirmed: 2011-07-01 07:04:56


Attachments
Output of "ajo-gcc -std=c99 -O2 -g -w -c test.c -v" (812 bytes, text/plain)
2011-06-30 23:59 UTC, Arthur O'Dwyer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arthur O'Dwyer 2011-06-30 23:59:34 UTC
Created attachment 24649 [details]
Output of "ajo-gcc -std=c99 -O2 -g -w -c test.c -v"

This failure reproduces for me with svn revision 175547
(2011-06-27). I've seen it twice in random testing, and never saw it back in May, so it must be a fairly new regression. I'm on Ubuntu 10.10, x86-64.


cat >test.c <<EOF
static void use(int *p_29) { }
void func_25(int *p_29) {
    for (short p_26 = 0; p_26 == 1; ++p_26)
      p_29 = 0;
    use(p_29);
}
EOF
gcc -std=c99 -O2 -g -w -c test.c

test.c: In function ‘func_25’:
test.c:6:1: error: definition in block 3 does not dominate use in block 5
for SSA_NAME: p_29_3 in statement:
# DEBUG D#1 => p_29_3
test.c:6:1: internal compiler error: verify_ssa failed


Bug 40711 (from 2009) has the same symptom, but doesn't require "-g", so it probably has a different root cause.

This test case is reduced from the output of Csmith 2.1.0 (git hash 01aa8b04,
https://github.com/Quuxplusone/csmith/), using the following command line:
csmith --no-paranoid --longlong --pointers --no-arrays --jumps --no-consts --volatiles --checksum --no-divs --muls --no-bitfields --no-packed-struct -s 651222746
Comment 1 Richard Biener 2011-07-01 07:04:56 UTC
Huh, this is from into-SSA.  Confirmed.
Comment 2 Jakub Jelinek 2011-07-01 11:16:14 UTC
Caused by my http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=175288
so I'll have a look...
Comment 3 Jakub Jelinek 2011-07-01 14:52:30 UTC
The problem is that for the debug uses before going into SSA we obviously don't want the uses to affect code generation and thus we don't call set_livein_block.
Unfortunately that means get_current_def is sometimes incorrect during rewrite_

--- tree-into-ssa.c.jj 22011-06-23 10:13:58.000000000 +0200
+++ tree-into-ssa.c 2011-07-01 16:23:04.000000000 +0200
@@ -1343,7 +1343,15 @@ rewrite_debug_stmt_uses (gimple stmt)
             }
         }
       else
-        def = get_current_def (var);
+        {
+          def = get_current_def (var);
+          if (def
+              && !SSA_NAME_IS_DEFAULT_DEF (def)
+              && gimple_bb (SSA_NAME_DEF_STMT (def)) != gimple_bb (stmt)
+              && !dominated_by_p (CDI_DOMINATORS, gimple_bb (stmt),
+                                  gimple_bb (SSA_NAME_DEF_STMT (def))))
+            def = NULL;
+        }
       if (def == NULL)
         {
           gimple_debug_bind_reset_value (stmt);

seems to fix the ICE, the question is if get_current_def can be trusted to be the right SSA_NAME even after this check.
I guess if the definition bb is the same as stmt's bb, it can, similarly
if get_phi_state (var) == NEED_PHI_STATE_NO (plus the dominated_by_p check above), or if bitmap_bit_p (get_def_blocks_for (var)->livein_blocks, gimple_bb (stmt)->index).  Any other cases?
Comment 4 Jakub Jelinek 2011-07-04 17:19:54 UTC
Author: jakub
Date: Mon Jul  4 17:19:52 2011
New Revision: 175818

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=175818
Log:
	PR debug/49602
	* tree-into-ssa.c (rewrite_debug_stmt_uses): Disregard
	get_current_def return value if it can't be trusted to be
	the current value of the variable in the current bb.

	* gcc.dg/pr49602.c: New test.

Added:
    trunk/gcc/testsuite/gcc.dg/pr49602.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-into-ssa.c
Comment 5 Jakub Jelinek 2011-07-04 18:24:39 UTC
Fixed.