re PR debug/49602 (verify_ssa failed (definition does not dominate use) with "-O2 -g")

PR debug/49602
	* tree-into-ssa.c (rewrite_debug_stmt_uses): Disregard
	get_current_def return value if it can't be trusted to be
	the current value of the variable in the current bb.

	* gcc.dg/pr49602.c: New test.

From-SVN: r175818